Step3 - 볼링 점수판(점수 계산) (#279)
* refactor: https://github.com/next-step/java-bowling/pull/262#discussion_r487504819 수정 반영

* refactor: https://github.com/next-step/java-bowling/pull/262#discussion_r487505199 수정 반영

* refactor: https://github.com/next-step/java-bowling/pull/262#discussion_r487506255 수정 반영

* refactor: https://github.com/next-step/java-bowling/pull/262#discussion_r487508073 수정 반영

* refactor: https://github.com/next-step/java-bowling/pull/262#discussion_r487508326 수정 반영

* refactor: https://github.com/next-step/java-bowling/pull/262#discussion_r487510785 수정 반영

* refactor: pin 클래스 기능 수정

* refactor: https://github.com/next-step/java-bowling/pull/262#discussion_r487514574 작업중..

* refactor: State 기능 수정

* refactor: State 수정

* refactor: Main 수정

* docs: 요구사항 정의 추가 및 기능 정의

* feat: 점수 역할 클래스 추가

* refactor: 점수 역할 클래스 적용

* feat: 점수 계산 기능 추가

* feat: 사용자 정의 기능 추가

* refactor: 일부 코드 정리

* refactor: State 관련 코드 정리

* refactor: LastFrame isFinish 기능 개선

* refactor: https://github.com/next-step/java-bowling/pull/279#discussion_r488773508 수정

* refactor: https://github.com/next-step/java-bowling/pull/279#discussion_r488777584 수정

* refactor: https://github.com/next-step/java-bowling/pull/279#discussion_r488802023 수정

* refactor: https://github.com/next-step/java-bowling/pull/279#discussion_r488863238 테스트 추가

* refactor: State 구조 변경

* refactor: State 구조 변경 영향 수정

* refactor: Game 클래스 수정

* refactor: Frame 계산 방법 수정

* refactor: 화면 출력 기능 수정

* refactor: getStatus 테스트 케이스 추가

* style: 코드 정리

* refactor: Final 클래스 변수명 수정

* refactor: https://github.com/next-step/java-bowling/pull/279#discussion_r490134117 수정

* refactor: https://github.com/next-step/java-bowling/pull/279#discussion_r490141879 수정

* refactor: https://github.com/next-step/java-bowling/pull/279#discussion_r490142751 수정

* refactor: https://github.com/next-step/java-bowling/pull/279#discussion_r490146717 수정

* refactor: https://githu